--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "menu_promo": {
     "active": true,
-    "url": "https://example.com"
+    "url": "https://g.page/r/CW6PkDoRk74gEBE/review"
   }
 }
